--- a/index.html
+++ b/index.html
@@ -30,30 +30,53 @@
 </head>
 <body>
 
-  FAQs
+  <!-- FAQ Accordion -->
+   <section class="faq-card">
+      <!-- FAQ header -->
+      <div class="faq-card_header">
+        <h1>FAQs</h1>
+        <i></i>
+        </div>
 
-  What is Frontend Mentor, and how will it help me?
+        <!-- FAQ Contents -->
+         <!-- Frist Summary -->
+        <div class="faq-card_summary">
+          <h2>What is Frontend Mentor, and how will it help me?</h2>
+        </div>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+        <div class="faq-card_description">
+          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        </div>
 
-  Is Frontend Mentor free?
+        <!-- Second Summary -->
+        <div class="faq-card_summary">
+          <h2>Is Frontend Mentor free?</h2>
+        </div>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+        <div class="faq-card_description">
+          <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+        </div>
 
-  Can I use Frontend Mentor projects in my portfolio?
+        <!-- Third Summary -->
+        <div class="faq-card_summary">
+          <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+        </div>
 
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
+        <div class="faq-card_description">
+          <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
+        </div>
 
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
+        <!-- Fourth Summary -->
+        <div class="faq-card_summary">
+          <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+        </div>
 
-  
+        <div class="faq-card_description">
+          <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
+        </div>
+    </section>
+
+    <!-- Atribution -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
