--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 </head>
 <body>
 
-  <!-- FAQ Accordion -->
+  <!-- Header Image Starts -->
+  <picture>
+    <source media="(min-width: 767px)" srcset="assets/images/background-pattern-desktop.svg"/>
+    <img src="assets/images/background-pattern-mobile.svg">
+  </picture>
+  <!-- Header Image Ends -->
+
+  <!-- FAQ Accordion Starts -->
    <section class="faq-card">
       <!-- FAQ header -->
       <div class="faq-card_header">
@@ -75,6 +82,7 @@
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
         </div>
     </section>
+  <!-- FAQ Accordion Ends -->
 
     <!-- Atribution -->
   <div class="attribution">
