--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Frontend Mentor | FAQ Acccordion</title>
 
 <!-- Favicon Icon -->
-<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 
 <!-- Reset css -->
 <link rel="stylesheet" href="reset.css">
@@ -29,13 +29,6 @@
 <!-- Google Fonts starts from here -->
 </head>
 <body>
-
-  <!-- Header Image Starts -->
-  <picture>
-    <source media="(min-width: 767px)" srcset="assets/images/background-pattern-desktop.svg"/>
-    <img src="assets/images/background-pattern-mobile.svg">
-  </picture>
-  <!-- Header Image Ends -->
 
   <!-- FAQ Accordion Starts -->
    <section class="faq-card">
