header image removed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 </head>
 <body>
 
+
   <!-- FAQ Accordion Starts -->
+  <!-- FAQ Accordion -->
    <section class="faq-card">
       <!-- FAQ header -->
       <div class="faq-card_header">
@@ -75,7 +77,6 @@
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
         </div>
     </section>
-  <!-- FAQ Accordion Ends -->
 
     <!-- Atribution -->
   <div class="attribution">
