--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
    <section class="faq-card">
       <!-- FAQ header -->
       <div class="faq-card_header">
+        <img src="assets/images/icon-star.svg" alt="star-icon">
         <h1>FAQs</h1>
         <i></i>
         </div>
