--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
          <!-- Frist Summary -->
         <div class="faq-card_summary">
           <h2>What is Frontend Mentor, and how will it help me?</h2>
+          <div class="summary_toogle-btn">
+          <span>+</span>
+          <span>-</span>
+          </div>
         </div>
 
         <div class="faq-card_description">
@@ -54,6 +58,10 @@
         <!-- Second Summary -->
         <div class="faq-card_summary">
           <h2>Is Frontend Mentor free?</h2>
+          <div class="summary_toogle-btn">
+            <span>+</span>
+            <span>-</span>
+            </div>
         </div>
 
         <div class="faq-card_description">
@@ -63,6 +71,10 @@
         <!-- Third Summary -->
         <div class="faq-card_summary">
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+          <div class="summary_toogle-btn">
+            <span>+</span>
+            <span>-</span>
+            </div>
         </div>
 
         <div class="faq-card_description">
@@ -70,8 +82,12 @@
         </div>
 
         <!-- Fourth Summary -->
-        <div class="faq-card_summary">
+        <div class="faq-card_summary ">
           <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+          <div class="summary_toogle-btn">
+            <span>+</span>
+            <span>-</span>
+            </div>
         </div>
 
         <div class="faq-card_description">
