pre checking style done

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             </div>
         </div>
 
-        <div class="faq-card_description">
+        <div class="faq-card_description faq-card-border-none">
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
         </div>
     </section>
-
+<br><br>
     <!-- Atribution -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
