--- a/index.html
+++ b/index.html
@@ -45,10 +45,6 @@
          <!-- Frist Summary -->
         <div class="faq-card_summary">
           <h2>What is Frontend Mentor, and how will it help me?</h2>
-          <div class="summary_toogle-btn">
-          <span>+</span>
-          <span>-</span>
-          </div>
         </div>
 
         <div class="faq-card_description">
@@ -58,10 +54,6 @@
         <!-- Second Summary -->
         <div class="faq-card_summary">
           <h2>Is Frontend Mentor free?</h2>
-          <div class="summary_toogle-btn">
-            <span>+</span>
-            <span>-</span>
-            </div>
         </div>
 
         <div class="faq-card_description">
@@ -71,10 +63,6 @@
         <!-- Third Summary -->
         <div class="faq-card_summary">
           <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-          <div class="summary_toogle-btn">
-            <span>+</span>
-            <span>-</span>
-            </div>
         </div>
 
         <div class="faq-card_description">
@@ -84,10 +72,6 @@
         <!-- Fourth Summary -->
         <div class="faq-card_summary ">
           <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
-          <div class="summary_toogle-btn">
-            <span>+</span>
-            <span>-</span>
-            </div>
         </div>
 
         <div class="faq-card_description faq-card-border-none">
@@ -100,5 +84,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
