--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
           <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.</p>
         </div>
     </section>
-<br><br>
+<br>
     <!-- Atribution -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.facebook.com/sultanmahmud.dev/" target="_blank">Sultan Mahmud</a>.
   </div>
   <script src="index.js"></script>
 </body>
