--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
 
 <!-- Responsive css -->
 <link rel="stylesheet" href="responsive.css">
-
-<!-- Google Fonts starts from here -->
 </head>
 <body>
-
-
   <!-- FAQ Accordion Starts -->
   <!-- FAQ Accordion -->
    <section class="faq-card">
@@ -43,34 +39,34 @@
 
         <!-- FAQ Contents -->
          <!-- Frist Summary -->
-        <div class="faq-card_summary">
-          <h2>What is Frontend Mentor, and how will it help me?</h2>
-        </div>
-
-        <div class="faq-card_description">
-          <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
-        </div>
+          <div class="faq-card_summary" tabindex="0">
+            <h2>What is Frontend Mentor, and how will it help me?</h2>
+          </div>
+  
+          <div class="faq-card_description">
+            <p>Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+          </div>
 
         <!-- Second Summary -->
-        <div class="faq-card_summary">
-          <h2>Is Frontend Mentor free?</h2>
-        </div>
+          <div class="faq-card_summary" tabindex="0">
+            <h2>Is Frontend Mentor free?</h2>
+          </div>
 
-        <div class="faq-card_description">
-          <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
-        </div>
+          <div class="faq-card_description">
+            <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free option providing access to a range of projects suitable for all skill levels.</p>
+          </div>
 
         <!-- Third Summary -->
-        <div class="faq-card_summary">
-          <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-        </div>
-
-        <div class="faq-card_description">
-          <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
-        </div>
+          <div class="faq-card_summary" tabindex="0">
+            <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+          </div>
+  
+          <div class="faq-card_description">
+            <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent way to showcase your skills to potential employers!</p>
+          </div>
 
         <!-- Fourth Summary -->
-        <div class="faq-card_summary ">
+        <div class="faq-card_summary" tabindex="0">
           <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
         </div>
 
